# inat-diff

./: .gitignore  INSTALL_MCP.md  MCP_INSTALLATION_SUMMARY.md  MCP_README.md  QUICKSTART.md  README.md  claude_desktop_config.json  example.py  install_mcp.bat  install_mcp.ps1  install_mcp.sh  invasive_species_check.py  mcp_server.py  pyproject.toml  requirements-mcp.txt  setup.py  smithery.json
archive/: bug-fix-summary_2025.10.17.md  debug_montana.py  debug_place_search.py  debug_place_types.py  test_observation_completeness_2025.10.17.py
inat-diff-mcp/: MCP_README.md  QUICKSTART.md  install_mcp.bat  install_mcp.ps1  install_mcp.sh  mcp_server.py  requirements-mcp.txt  smithery.json
inat_diff/: __init__.py  cli.py  client.py  exceptions.py  query.py  utils.py  visualize.py
tests/: test_place_resolution.py
