[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inat-diff"
version = "0.2.0"
description = "A Python library and MCP server for detecting species observation patterns in iNaturalist data"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "iNaturalist Difference Detection Team"}
]
keywords = ["inaturalist", "biodiversity", "invasive-species", "ecology", "mcp", "mcp-server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
inat-diff = "inat_diff.cli:main"
inat-diff-visualize = "inat_diff.visualize:main"
inat-diff-mcp = "mcp_server:main"

[project.urls]
Homepage = "https://github.com/JasonWildMe/inat-diff"
Documentation = "https://github.com/JasonWildMe/inat-diff#readme"
Repository = "https://github.com/JasonWildMe/inat-diff"
Issues = "https://github.com/JasonWildMe/inat-diff/issues"

[tool.setuptools.packages.find]
include = ["inat_diff*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
